ingress/service.ingress-upstream.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: ingress-upstream
    name: ingress-upstream
    namespace: default
spec:
    ports:
    - name: 80-8080
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
        app: router
    sessionAffinity: None
    type: ClusterIP
status:
    loadBalancer: {}
