ingress/local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-configuration-snippet
  namespace: section
spec:
  ingressClassName: nginx
  rules:
  - host: shop.taqueria.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: router-service
            port:
              number: 8080
